<resources>
    <string name="app_name">Blueflow</string>
    <string name="re_enter_new_username">re enter new username</string>
    <string name="change">change</string>
    <string name="change_username">CHANGE USERNAME</string>
    <string name="enter_new_username">enter new username</string>
    <string name="enter_username">enter username</string>
    <string name="re_enter_username">re-enter username</string>
    <string name="change_password">change password</string>
    <string name="old_password">Old password</string>
    <!--    <string name="change">change</string>-->
    <string name="new_password">new password</string>
    <string name="re_enter_new_password">re- enter new password</string>
    <string name="play">play</string>
</resources>